--- a/index.html
+++ b/index.html
@@ -1,38 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/main.css">
+    <!-- CSS only -->
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous"> -->
 </head>
+
 <body onload="onInit()">
-    <header class="header"><h1>Book Shop</h1></header>
+    <header class="header">
+        <h1 data-trans="heading">Book Shop</h1>
+        <!-- <div class="langs"> -->
+            <div class="he" onclick="onSetLang('he')"></div>
+            <div class="en" onclick="onSetLang('en')"></div>
+        <!-- </div> -->
+    </header>
     <div class="controller">
         <label class="price-range">
-            Max Price:
+            <span data-trans="price-range"> Price:</span>
             <input type="range" min="0" max="100" value="20" class="filter-price-range"
                 onchange="this.title=this.value;onSetFilterBy({price: this.value})" />
         </label>
         <label>
-            Min Rate:
+            <span data-trans="rate-range">Min Rate:</span>
             <input type="range" min="0" max="10" value="0" class="filter-rate-range"
                 onchange="this.title=this.value;onSetFilterBy({rate: this.value})" />
         </label>
-        <input class="search-input" type="text" placeholder="search" oninput="onSetFilterBy({txt: this.value})"/>
+        <input class="search-input" type="text" placeholder="search" oninput="onSetFilterBy({txt: this.value})" />
     </div>
     <div class="sort-controller">
-        <button class="controller-btn" onclick="onOpenAddBookModal()">Create new book</button>
-        <button class="table-btn" onclick="onSetRenderType('table')"></button>
-        <button class="divs-btn" onclick="onSetRenderType('divs')"></button>
+        <button class="controller-btn" data-trans="add-book" onclick="onOpenAddBookModal()">Create new book</button>
+        <button class="table-btn ltr" onclick="onSetRenderType('table')"></button>
+        <button class="divs-btn ltr" onclick="onSetRenderType('divs')"></button>
     </div>
     <div class="books-display">
 
     </div>
     <div class="page-scrolling">
         <div class="paging-bar">
-            
+
         </div>
     </div>
 
@@ -40,32 +51,33 @@
     <div class="book-modal">
         <button class="modal-btn" value="book-modal" onclick="onCloseModal(this)">X</button>
         <h3></h3>
-        <h4>Price: <span></span></h4>
+        <h4><span data-trans="price-range"></span><span class="price-span"></span></h4>
         <p></p>
     </div>
     <div class="create-book-modal">
         <button class="modal-btn" value="cbm-modal" onclick="onCloseModal(this)">X</button>
         <form onsubmit="onAddBook(event)">
-            <span class="name-span">Name:</span>
-            <input type="txt" name="b-name" class="book-name"/>
-            <span class="price-span">Price:</span>
-            <input type="txt" name="b-price" class="book-price-input"/>
-            <button class="add-book-btn" >Add Book</button>
+            <span class="name-span" data-trans="modal-name">Name:</span>
+            <input type="txt" name="b-name" class="book-name" />
+            <span class="price-span" data-trans="price-range">Price:</span>
+            <input type="txt" name="b-price" class="book-price-input" />
+            <button class="add-book-btn" data-trans="add-book-btn">Add Book</button>
         </form>
     </div>
     <div class="update-book-modal">
         <button class="modal-btn" value="ubm-modal" onclick="onCloseModal(this)">X</button>
         <form onsubmit="onUpdateBook(event)">
-            <span class="price-span">Price:</span>
-            <input type="txt" name="bu-price" class="book-price-input"/>
-            <button class="update-price-btn" >Update</button>
+            <span class="price-span" data-trans="price-range">Price:</span>
+            <input type="txt" name="bu-price" class="book-price-input" />
+            <button class="update-price-btn" data-trans="update-btn">Update</button>
         </form>
     </div>
 
-    
+    <script src="js/services/i18n.service.js"></script>
     <script src="js/services/util-service.js"></script>
     <script src="js/services/storage-service.js"></script>
     <script src="js/services/books-service.js"></script>
     <script src="js/books-controller.js"></script>
 </body>
+
 </html>
